--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ author: Aarif Razak
 
 theme: jekyll-theme-minimal
 logo: aarif_washington_square_Park.jpg
-description: Double Majoring in CS and Psychology
+description: Thrilled about NYC Weather
 # --- Footer social media links --- #
 
 # Select the social network links that you want to show in the footer.
